--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
                             <span class="audio-show-name">THE BREAKDOWN</span>
                             <span class="audio-dot">•</span>
                             <span class="audio-recency" id="audio-recency">Loading...</span>
+                            <span class="audio-links">
+                                <a href="https://podcasts.apple.com/us/podcast/the-breakdown/id1438693620" target="_blank" rel="noopener" class="audio-link" title="Apple Podcasts">
+                                    <svg viewBox="0 0 24 24" width="14" height="14"><path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"/></svg>
+                                </a>
+                                <a href="https://open.spotify.com/show/538vuul1PuorUDwgkVYO6u" target="_blank" rel="noopener" class="audio-link" title="Spotify">
+                                    <svg viewBox="0 0 24 24" width="14" height="14"><path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm4.64 14.36c-.18.28-.56.37-.84.2-2.3-1.4-5.2-1.72-8.62-.94-.33.08-.66-.13-.73-.46-.08-.33.13-.66.46-.73 3.74-.86 6.95-.49 9.53 1.09.28.17.37.55.2.84zm1.22-2.7c-.23.35-.72.46-1.07.23-2.63-1.62-6.64-2.09-9.75-1.14-.42.13-.86-.11-.99-.52-.13-.42.11-.86.52-.99 3.55-1.08 7.96-.56 10.97 1.35.35.23.46.72.23 1.07h.09zm.11-2.81c-3.16-1.88-8.36-2.05-11.37-1.14-.48.15-1-.13-1.15-.61-.15-.48.13-1 .61-1.15 3.47-1.05 9.23-.85 12.87 1.31.44.26.58.84.32 1.28-.26.44-.84.58-1.28.31z"/></svg>
+                                </a>
+                            </span>
                         </div>
                     </div>
                     
@@ -150,7 +158,7 @@
                         </div>
                     </div>
                     
-                    <audio id="audio-element" preload="metadata"></audio>
+                    <audio id="audio-element" preload="none"></audio>
                 </div>
 
                 <!-- Article Content -->
