--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
                     
                     <div class="audio-player">
                         <button class="audio-play-btn" id="audio-play-btn" aria-label="Play">
-                            <svg class="play-icon" id="play-icon" viewBox="0 0 24 24" width="20" height="20">
-                                <path fill="currentColor" d="M8 5v14l11-7z"/>
+                            <svg class="play-icon" id="play-icon" viewBox="0 0 24 24" width="22" height="22">
+                                <path d="M8 5v14l11-7z"/>
                             </svg>
-                            <svg class="pause-icon hidden" id="pause-icon" viewBox="0 0 24 24" width="20" height="20">
-                                <path fill="currentColor" d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/>
+                            <svg class="pause-icon" id="pause-icon" viewBox="0 0 24 24" width="22" height="22">
+                                <path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/>
                             </svg>
                         </button>
                         <div class="audio-progress-container">
