--- a/index.html
+++ b/index.html
@@ -193,39 +193,32 @@
             <aside class="context-sidebar">
                 <header class="sidebar-header">
                     <h2 class="sidebar-title">The Week Ahead</h2>
+                    <span class="sidebar-date" id="week-ahead-date">Week of Dec 2</span>
                 </header>
 
-                <div class="context-list">
-                    <article class="context-item">
-                        <span class="context-rank">#1</span>
-                        <div class="context-content">
-                            <h4 class="context-headline" id="week-1-headline">Friday's Jobs Report</h4>
-                            <p class="context-excerpt" id="week-1-excerpt">The macro fulcrum. Weak data supports rate cuts; strong data extends the pause.</p>
-                        </div>
+                <div class="week-ahead-list">
+                    <article class="week-card" data-week-section="fulcrum">
+                        <span class="week-label">THIS WEEK'S FULCRUM</span>
+                        <h4 class="week-headline" id="week-fulcrum-headline">Friday's Jobs Report</h4>
+                        <p class="week-excerpt" id="week-fulcrum-excerpt">The macro fulcrum. Weak data supports rate cuts; strong data extends the pause.</p>
                     </article>
 
-                    <article class="context-item">
-                        <span class="context-rank">#2</span>
-                        <div class="context-content">
-                            <h4 class="context-headline" id="week-2-headline">BTC $82,000</h4>
-                            <p class="context-excerpt" id="week-2-excerpt">The line in the sand. Below it, momentum traders capitulate.</p>
-                        </div>
+                    <article class="week-card" data-week-section="levels">
+                        <span class="week-label">LEVELS WORTH KNOWING</span>
+                        <h4 class="week-headline" id="week-levels-headline">BTC $82,000 - $95,000</h4>
+                        <p class="week-excerpt" id="week-levels-excerpt">The range that matters. Break below triggers capitulation; above confirms accumulation.</p>
                     </article>
 
-                    <article class="context-item">
-                        <span class="context-rank">#3</span>
-                        <div class="context-content">
-                            <h4 class="context-headline" id="week-3-headline">Stablecoin Supply</h4>
-                            <p class="context-excerpt" id="week-3-excerpt">USDT at all-time high. Liquidity expansion amid price weakness.</p>
-                        </div>
+                    <article class="week-card" data-week-section="unpriced">
+                        <span class="week-label">THE UNPRICED STORY</span>
+                        <h4 class="week-headline" id="week-unpriced-headline">Stablecoin Supply Divergence</h4>
+                        <p class="week-excerpt" id="week-unpriced-excerpt">USDT at all-time high. Liquidity expansion amid price weakness signals accumulation.</p>
                     </article>
 
-                    <article class="context-item">
-                        <span class="context-rank">#4</span>
-                        <div class="context-content">
-                            <h4 class="context-headline" id="week-4-headline">MicroStrategy Nasdaq-100</h4>
-                            <p class="context-excerpt" id="week-4-excerpt">December 23 inclusion. Forced index buying ahead.</p>
-                        </div>
+                    <article class="week-card" data-week-section="underestimated">
+                        <span class="week-label">THE UNDERESTIMATED</span>
+                        <h4 class="week-headline" id="week-underestimated-headline">December Liquidity Vacuum</h4>
+                        <p class="week-excerpt" id="week-underestimated-excerpt">Holiday trading desks + thin books = amplified moves in either direction.</p>
                     </article>
                 </div>
 
