--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                 <span class="ticker-value" id="total-market">$3.2T</span>
                 <span class="ticker-change" id="market-change">-1.2%</span>
             </div>
+            <div class="ticker">
+                <span class="ticker-label">Market Activity</span>
+                <span class="ticker-value ticker-activity" id="market-activity">Active</span>
+            </div>
         </div>
 
         <!-- Section Navigation -->
