--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Litmus | Crypto Intelligence</title>
+    <title>The Litmus Daily | Crypto Intelligence</title>
+    <link rel="icon" type="image/png" href="litmuslogo.png">
+    <link rel="apple-touch-icon" href="litmuslogo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,11 +15,9 @@
     <div class="container">
         <!-- Header -->
         <header class="masthead">
-            <div class="masthead-left">
-                <div class="logo">
-                    <span class="logo-mark">/</span>
-                    <span class="logo-type">THE L/TMUS</span>
-                </div>
+            <div class="masthead-brand">
+                <img src="litmuslogo.png" alt="The Litmus" class="logo-icon">
+                <span class="brand-name">The Litmus Daily</span>
             </div>
             <nav class="edition-picker">
                 <button class="edition active" data-region="americas">Americas</button>
