--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <!-- Section Navigation -->
         <nav class="section-nav">
             <a href="#" class="section-link active">Intelligence</a>
-            <a href="#" class="section-link">Week Ahead</a>
+            <a href="weekend.html" class="section-link">Weekend Magazine</a>
             <a href="#" class="section-link">Audio</a>
             <a href="#" class="section-link">Archive</a>
         </nav>
@@ -209,7 +209,7 @@
             <div class="sticky-right">
                 <nav class="sticky-nav">
                     <a href="#" class="sticky-link active">Intelligence</a>
-                    <a href="#" class="sticky-link">Week Ahead</a>
+                    <a href="weekend.html" class="sticky-link">Weekend Magazine</a>
                     <a href="#" class="sticky-link">Audio</a>
                     <a href="#" class="sticky-link">Archive</a>
                 </nav>
