--- a/index.html
+++ b/index.html
@@ -160,22 +160,22 @@
         <div class="market-strip">
             <div class="ticker">
                 <span class="ticker-label">Bitcoin</span>
-                <span class="ticker-value" id="btc-price">$97,245</span>
-                <span class="ticker-change down" id="btc-change">-2.4%</span>
+                <span class="ticker-value" id="btc-price">---</span>
+                <span class="ticker-change" id="btc-change"></span>
             </div>
             <div class="ticker">
                 <span class="ticker-label">Ether</span>
-                <span class="ticker-value" id="eth-price">$3,180</span>
-                <span class="ticker-change down" id="eth-change">-3.1%</span>
+                <span class="ticker-value" id="eth-price">---</span>
+                <span class="ticker-change" id="eth-change"></span>
             </div>
             <div class="ticker">
                 <span class="ticker-label">Total Market</span>
-                <span class="ticker-value" id="total-market">$3.2T</span>
-                <span class="ticker-change" id="market-change">-1.2%</span>
+                <span class="ticker-value" id="total-market">---</span>
+                <span class="ticker-change" id="market-change"></span>
             </div>
             <div class="ticker">
                 <span class="ticker-label">Market Activity</span>
-                <span class="ticker-value ticker-activity" id="market-activity">Active</span>
+                <span class="ticker-value ticker-activity" id="market-activity">---</span>
             </div>
         </div>
 
@@ -192,19 +192,19 @@
             <div class="sticky-left">
                 <span class="sticky-ticker">
                     <span class="sticky-label">BTC</span>
-                    <span class="sticky-value" id="sticky-btc-price">$92.1K</span>
-                    <span class="sticky-change up" id="sticky-btc-change">+4.3%</span>
+                    <span class="sticky-value" id="sticky-btc-price">---</span>
+                    <span class="sticky-change" id="sticky-btc-change"></span>
                 </span>
                 <span class="sticky-ticker">
                     <span class="sticky-label">ETH</span>
-                    <span class="sticky-value" id="sticky-eth-price">$3.1K</span>
-                    <span class="sticky-change up" id="sticky-eth-change">+5.5%</span>
+                    <span class="sticky-value" id="sticky-eth-price">---</span>
+                    <span class="sticky-change" id="sticky-eth-change"></span>
                 </span>
                 <span class="sticky-ticker">
                     <span class="sticky-label">MKT</span>
-                    <span class="sticky-value" id="sticky-market">$3.2T</span>
+                    <span class="sticky-value" id="sticky-market">---</span>
                 </span>
-                <span class="sticky-activity" id="sticky-activity">Active</span>
+                <span class="sticky-activity" id="sticky-activity">---</span>
             </div>
             <div class="sticky-right">
                 <nav class="sticky-nav">
