--- a/index.html
+++ b/index.html
@@ -279,13 +279,22 @@
                     </blockquote>
                 </aside>
                 
-                <!-- Your Coins Section -->
-                <section class="your-coins" id="your-coins">
-                    <header class="your-coins-header">
-                        <span class="your-coins-label">YOUR COINS LAST 24H</span>
+                <!-- Relative Performance Section -->
+                <section class="relative-performance" id="relative-performance">
+                    <header class="relative-header">
+                        <span class="relative-label">YOUR COINS VS MARKET</span>
                     </header>
-                    <div class="coin-rows" id="coin-rows">
-                        <!-- Dynamic coin rows -->
+                    <div class="relative-chart" id="relative-chart">
+                        <!-- Market baseline row -->
+                        <div class="relative-row market-row">
+                            <span class="rel-name">Market</span>
+                            <span class="rel-change" id="market-24h-change">---</span>
+                            <div class="rel-bar-container">
+                                <div class="rel-baseline"></div>
+                            </div>
+                            <span class="rel-vs baseline">baseline</span>
+                        </div>
+                        <!-- Dynamic coin rows inserted here -->
                     </div>
                 </section>
             </aside>
