--- a/weekend.html
+++ b/weekend.html
@@ -173,7 +173,7 @@
                         <span class="article-label" id="reading-label">THE WEEK IN REVIEW</span>
                         <h1 class="article-headline" id="reading-headline">Where the Money Went</h1>
                         <div class="article-meta">
-                            <span class="article-byline">L/tmus Intelligence</span>
+                            <span class="article-byline">Litmus Intelligence</span>
                             <span class="article-timestamp" id="reading-timestamp">December 7, 2025</span>
                         </div>
                     </header>
