--- a/weekend.html
+++ b/weekend.html
@@ -195,7 +195,7 @@
                 <section class="the-graph" id="the-graph">
                     <header class="graph-header">
                         <span class="graph-label">THE GRAPH</span>
-                        <span class="graph-subtitle">Dry Powder on Sidelines</span>
+                        <span class="graph-subtitle">Stablecoin % of Market • 12M</span>
                     </header>
                     
                     <div class="graph-chart">
