--- a/weekend.html
+++ b/weekend.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Litmus Weekend</title>
+<title>Weekend Magazine | The Litmus</title>
 
 <!-- Google Analytics 4 -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RL4ZYLE5G9"></script>
@@ -35,7 +35,7 @@ gtag('config', 'G-RL4ZYLE5G9');
 <div class="masthead-center">
 <a href="index.html" class="brand-link">
 <img src="litmuslogo.png" alt="The Litmus" class="brand-logo">
-<h1 class="brand-name">Litmus<em>Weekend</em></h1>
+<h1 class="brand-name">Litmus <em>Weekend</em></h1>
 </a>
 </div>
 
@@ -46,7 +46,7 @@ gtag('config', 'G-RL4ZYLE5G9');
 
 <!-- Navigation -->
 <nav class="section-nav">
-<a href="index.html" class="section-link">Daily Edition</a>
+<a href="index.html" class="section-link">Today</a>
 <a href="weekend.html" class="section-link active">Weekend Magazine</a>
 </nav>
 
@@ -327,9 +327,9 @@ Broad participation with high conviction. The market is moving decisively higher
 <div class="sector-fill positive" id="sector-payment-bar" style="width: 82%"></div>
 </div>
 <div class="sector-detail" id="sector-payment-detail">
-<p class="sector-about">Digital currencies designed primarily for peer-to-peer transactions and store of value. Bitcoin dominates, with privacy coins and faster alternatives filling niches.</p>
-<p class="sector-drivers"><strong>Key drivers:</strong> Institutional adoption, ETF flows, macro hedging demand, regulatory clarity, halving cycles.</p>
 <p class="sector-weekly" id="sector-payment-weekly"></p>
+<p class="sector-drivers"><strong>Key drivers:</strong> Institutional adoption, ETF flows, macro hedging demand, regulatory clarity, halving cycles.</p>
+<p class="sector-about">Digital currencies designed primarily for peer-to-peer transactions and store of value. Bitcoin dominates, with privacy coins and faster alternatives filling niches.</p>
 </div>
 </div>
 
@@ -343,9 +343,9 @@ Broad participation with high conviction. The market is moving decisively higher
 <div class="sector-fill neutral" id="sector-stablecoin-bar" style="width: 50%"></div>
 </div>
 <div class="sector-detail" id="sector-stablecoin-detail">
-<p class="sector-about">Tokens pegged to fiat currencies, primarily USD. Essential infrastructure for trading, DeFi, and cross-border payments.</p>
-<p class="sector-drivers"><strong>Key drivers:</strong> Trading volume, DeFi TVL, regulatory developments, yield differentials vs TradFi, reserve transparency.</p>
 <p class="sector-weekly" id="sector-stablecoin-weekly"></p>
+<p class="sector-drivers"><strong>Key drivers:</strong> Trading volume, DeFi TVL, regulatory developments, yield differentials vs TradFi, reserve transparency.</p>
+<p class="sector-about">Tokens pegged to fiat currencies, primarily USD. Essential infrastructure for trading, DeFi, and cross-border payments.</p>
 </div>
 </div>
 
@@ -359,9 +359,9 @@ Broad participation with high conviction. The market is moving decisively higher
 <div class="sector-fill positive" id="sector-infrastructure-bar" style="width: 90%"></div>
 </div>
 <div class="sector-detail" id="sector-infrastructure-detail">
-<p class="sector-about">Layer 1 blockchains and scaling solutions that power decentralized applications. The foundation layer of crypto's technology stack.</p>
-<p class="sector-drivers"><strong>Key drivers:</strong> Developer activity, TVL growth, transaction throughput, network upgrades, ecosystem expansion.</p>
 <p class="sector-weekly" id="sector-infrastructure-weekly"></p>
+<p class="sector-drivers"><strong>Key drivers:</strong> Developer activity, TVL growth, transaction throughput, network upgrades, ecosystem expansion.</p>
+<p class="sector-about">Layer 1 blockchains and scaling solutions that power decentralized applications. The foundation layer of crypto's technology stack.</p>
 </div>
 </div>
 
@@ -375,9 +375,9 @@ Broad participation with high conviction. The market is moving decisively higher
 <div class="sector-fill positive" id="sector-defi-bar" style="width: 68%"></div>
 </div>
 <div class="sector-detail" id="sector-defi-detail">
-<p class="sector-about">Decentralized lending, trading, and yield protocols. Recreates traditional financial services without intermediaries.</p>
-<p class="sector-drivers"><strong>Key drivers:</strong> TVL trends, yield opportunities, protocol revenue, institutional DeFi adoption, regulatory signals.</p>
 <p class="sector-weekly" id="sector-defi-weekly"></p>
+<p class="sector-drivers"><strong>Key drivers:</strong> TVL trends, yield opportunities, protocol revenue, institutional DeFi adoption, regulatory signals.</p>
+<p class="sector-about">Decentralized lending, trading, and yield protocols. Recreates traditional financial services without intermediaries.</p>
 </div>
 </div>
 
@@ -391,9 +391,9 @@ Broad participation with high conviction. The market is moving decisively higher
 <div class="sector-fill positive" id="sector-utility-bar" style="width: 58%"></div>
 </div>
 <div class="sector-detail" id="sector-utility-detail">
-<p class="sector-about">Tokens powering specific services: oracles, storage, compute. Value tied to actual network usage and demand for services.</p>
-<p class="sector-drivers"><strong>Key drivers:</strong> Enterprise adoption, network usage metrics, partnership announcements, real-world integration.</p>
 <p class="sector-weekly" id="sector-utility-weekly"></p>
+<p class="sector-drivers"><strong>Key drivers:</strong> Enterprise adoption, network usage metrics, partnership announcements, real-world integration.</p>
+<p class="sector-about">Tokens powering specific services: oracles, storage, compute. Value tied to actual network usage and demand for services.</p>
 </div>
 </div>
 
@@ -407,9 +407,9 @@ Broad participation with high conviction. The market is moving decisively higher
 <div class="sector-fill negative" id="sector-entertainment-bar" style="width: 35%"></div>
 </div>
 <div class="sector-detail" id="sector-entertainment-detail">
-<p class="sector-about">Gaming, metaverse, and NFT-adjacent tokens. High beta to risk sentiment, driven by user engagement and speculation.</p>
-<p class="sector-drivers"><strong>Key drivers:</strong> Game launches, user metrics, NFT market sentiment, celebrity/brand partnerships, retail speculation cycles.</p>
 <p class="sector-weekly" id="sector-entertainment-weekly"></p>
+<p class="sector-drivers"><strong>Key drivers:</strong> Game launches, user metrics, NFT market sentiment, celebrity/brand partnerships, retail speculation cycles.</p>
+<p class="sector-about">Gaming, metaverse, and NFT-adjacent tokens. High beta to risk sentiment, driven by user engagement and speculation.</p>
 </div>
 </div>
 
@@ -423,9 +423,9 @@ Broad participation with high conviction. The market is moving decisively higher
 <div class="sector-fill positive" id="sector-ai-bar" style="width: 95%"></div>
 </div>
 <div class="sector-detail" id="sector-ai-detail">
-<p class="sector-about">Decentralized GPU networks and AI-focused protocols. Benefiting from the broader AI investment theme and compute demand.</p>
-<p class="sector-drivers"><strong>Key drivers:</strong> AI industry momentum, GPU demand, decentralized compute adoption, NVIDIA correlation, model training costs.</p>
 <p class="sector-weekly" id="sector-ai-weekly"></p>
+<p class="sector-drivers"><strong>Key drivers:</strong> AI industry momentum, GPU demand, decentralized compute adoption, NVIDIA correlation, model training costs.</p>
+<p class="sector-about">Decentralized GPU networks and AI-focused protocols. Benefiting from the broader AI investment theme and compute demand.</p>
 </div>
 </div>
 
