--- a/weekend.html
+++ b/weekend.html
@@ -29,7 +29,7 @@ gtag('config', 'G-RL4ZYLE5G9');
 <!-- Header -->
 <header class="masthead">
 <div class="masthead-left">
-<span class="edition-label">WEEKEND EDITION</span>
+<span class="edition-label"></span>
 </div>
 
 <div class="masthead-center">
