--- a/weekend.html
+++ b/weekend.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Litmus Weekend</title>
+<title>Weekend Magazine | The Litmus</title>
 
 <!-- Google Analytics 4 -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RL4ZYLE5G9"></script>
@@ -29,7 +29,7 @@ gtag('config', 'G-RL4ZYLE5G9');
 <!-- Header -->
 <header class="masthead">
 <div class="masthead-left">
-<span class="edition-label"></span>
+<span class="edition-label">WEEKEND EDITION</span>
 </div>
 
 <div class="masthead-center">
@@ -46,7 +46,7 @@ gtag('config', 'G-RL4ZYLE5G9');
 
 <!-- Navigation -->
 <nav class="section-nav">
-<a href="index.html" class="section-link">Daily Edition</a>
+<a href="index.html" class="section-link">Today</a>
 <a href="weekend.html" class="section-link active">Weekend Magazine</a>
 </nav>
 
