--- a/weekend.html
+++ b/weekend.html
@@ -312,8 +312,7 @@ Broad participation with high conviction. The market is moving decisively higher
 <!-- Crypto Sectors Performance - Compact Bar Style -->
 <section class="sectors-section">
 <header class="sectors-header-compact">
-<span class="sectors-label">SECTORS · 7D</span>
-<span class="sectors-market" id="sectors-market-change">MARKET ---</span>
+<span class="sectors-label">SECTORS vs MARKET of <span id="sectors-market-change">---</span></span>
 </header>
 
 <div class="sectors-chart" id="sectors-chart">
