--- a/weekend.html
+++ b/weekend.html
@@ -207,8 +207,7 @@ gtag('config', 'G-RL4ZYLE5G9');
 <section class="the-graph" id="the-graph">
 <header class="graph-header">
 <span class="graph-label">THE GRAPH</span>
-                        <span class="graph-subtitle">Stablecoin % of Market • 12M</span>
-                        <span class="graph-subtitle">Stablecoin Share • 12M</span>
+<span class="graph-subtitle">Stablecoin Share last 12 months</span>
 </header>
 
 <div class="graph-chart">
