--- a/weekend.html
+++ b/weekend.html
@@ -49,6 +49,32 @@ gtag('config', 'G-RL4ZYLE5G9');
 <a href="weekend.html" class="section-link active">Weekend Magazine</a>
 </nav>
 
+<!-- Sticky Header (appears on scroll) -->
+<div class="sticky-header weekend-sticky" id="sticky-header">
+<div class="sticky-left">
+<span class="sticky-ticker">
+<span class="sticky-label">BTC</span>
+<span class="sticky-value" id="sticky-btc-price">---</span>
+<span class="sticky-change" id="sticky-btc-change"></span>
+</span>
+<span class="sticky-ticker">
+<span class="sticky-label">ETH</span>
+<span class="sticky-value" id="sticky-eth-price">---</span>
+<span class="sticky-change" id="sticky-eth-change"></span>
+</span>
+<span class="sticky-ticker">
+<span class="sticky-label">MKT</span>
+<span class="sticky-value" id="sticky-market">---</span>
+</span>
+</div>
+<div class="sticky-right">
+<nav class="sticky-nav">
+<a href="index.html" class="sticky-link">Daily Edition</a>
+<a href="weekend.html" class="sticky-link active">Weekend Magazine</a>
+</nav>
+</div>
+</div>
+
 <!-- Magazine Hero -->
 <section class="magazine-hero" id="magazine-hero">
 <div class="hero-image">
