--- a/weekend.html
+++ b/weekend.html
@@ -210,6 +210,13 @@ gtag('config', 'G-RL4ZYLE5G9');
 </div>
 </header>
 
+<!-- Week in Review Video (only shown when video exists) -->
+<div class="week-video-container" id="week-video-container" style="display: none;">
+<video class="week-video" id="week-video" controls playsinline>
+<source id="week-video-source" src="" type="video/mp4">
+</video>
+</div>
+
 <div class="article-body" id="reading-body">
 <p>Bitcoin's push toward $100,000 this week masked a more complex rotation beneath the surface. While headlines celebrated the milestone approach, the real story unfolded in the distribution of capital across the broader market—a story that reveals as much about institutional strategy as it does about price action.</p>
 
