--- a/index.html
+++ b/index.html
@@ -405,12 +405,18 @@
                 <!-- The Number -->
                 <section class="the-number" id="the-number">
                     <header class="number-header">
-                        <span class="number-label">THE NUMBER</span>
+                        <span class="number-label" id="number-label">THE NUMBER</span>
+                        <span class="number-day" id="number-day"></span>
                     </header>
-                    <div class="number-value" id="number-value">$94.2B</div>
+                    <div class="number-main">
+                        <span class="number-value" id="number-value">65</span>
+                        <span class="number-unit" id="number-unit">/100</span>
+                    </div>
+                    <p class="number-subtitle" id="number-subtitle"></p>
                     <p class="number-context" id="number-context">
-                        Stablecoin market cap at all-time high—dry powder waiting on sidelines
+                        Greed is building - momentum favors bulls, but watch for overextension
                     </p>
+                    <span class="number-change" id="number-change"></span>
                 </section>
 
                 <!-- Market Mood 9-Box -->
