--- a/weekend.html
+++ b/weekend.html
@@ -47,6 +47,7 @@ gtag('config', 'G-RL4ZYLE5G9');
 <nav class="section-nav">
 <a href="index.html" class="section-link">Daily Edition</a>
 <a href="weekend.html" class="section-link active">Weekend Magazine</a>
+<a href="personal.html" class="section-link">Personal Edition</a>
 </nav>
 
 <!-- Sticky Header (appears on scroll) -->
@@ -71,6 +72,7 @@ gtag('config', 'G-RL4ZYLE5G9');
 <nav class="sticky-nav">
 <a href="index.html" class="sticky-link">Daily Edition</a>
 <a href="weekend.html" class="sticky-link active">Weekend Magazine</a>
+<a href="personal.html" class="sticky-link">Personal Edition</a>
 </nav>
 </div>
 </div>
