--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <nav class="section-nav">
             <a href="#" class="section-link active">Daily Edition</a>
             <a href="weekend.html" class="section-link">Weekend Magazine</a>
-            <a href="#" class="section-link">Audio</a>
+            <a href="personal.html" class="section-link">Personal Edition</a>
             <a href="#" class="section-link">Archive</a>
         </nav>
 
@@ -210,7 +210,7 @@
                 <nav class="sticky-nav">
                     <a href="#" class="sticky-link active">Daily Edition</a>
                     <a href="weekend.html" class="sticky-link">Weekend Magazine</a>
-                    <a href="#" class="sticky-link">Audio</a>
+                    <a href="personal.html" class="sticky-link">Personal Edition</a>
                     <a href="#" class="sticky-link">Archive</a>
                 </nav>
                 <div class="sticky-region" id="sticky-region">APAC</div>
