--- a/personal.html
+++ b/personal.html
@@ -193,6 +193,7 @@
         </div>
     </div>
 
+    <script src="coins-data.js"></script>
     <script src="personal.js"></script>
 </body>
 </html>
