--- a/personal.html
+++ b/personal.html
@@ -72,6 +72,7 @@
                         <span class="y-label" data-segment="defi">DeFi</span>
                         <span class="y-label" data-segment="real_world">Real World Use</span>
                         <span class="y-label" data-segment="ai_compute">AI & Compute</span>
+                        <span class="y-label" data-segment="entertainment">Entertainment</span>
                         <span class="y-label" data-segment="payments">Payments</span>
                     </div>
                     
@@ -204,6 +205,7 @@
                         <button class="segment-btn" data-segment="defi">DeFi</button>
                         <button class="segment-btn" data-segment="real_world">Real World Use</button>
                         <button class="segment-btn" data-segment="ai_compute">AI & Compute</button>
+                        <button class="segment-btn" data-segment="entertainment">Entertainment</button>
                         <button class="segment-btn" data-segment="payments">Payments</button>
                     </div>
                 </div>
